// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchInput > Key > renders correctly with disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #b5b7bd;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="false"
      data-disabled="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        K
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special   key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="false"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ␣
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Alt key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Alt
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowDown key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ↓
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowLeft key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ←
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowRight key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        →
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowUp key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ↑
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Backspace key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ⌫
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special CapsLock key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Caps
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Control key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Ctrl
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Delete key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ⌦
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Enter key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ↵
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Escape key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Esc
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Meta key 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #f9f9fa;
  border-radius: 4px;
  border: 0.5px solid #d9dadd;
  min-width: 24px;
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 8px;
}

.emotion-2 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ⌘
      </span>
    </div>
  </div>
</DocumentFragment>
`;
